# sentential-gw

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  flake.nix  go.mod  go.sum  justfile  main.go  pyproject.toml  result
.github/workflows/: build.yml  main.yml
internal/proxy/: event.go  proxy.go  proxy_test.go
internal/util/: config.go
sentential-gw/: index.json
src/: go.sum  main.py
src/internal/proxy/: event.go  event_test.go
src/internal/util/: config.go
src/models/: api_gateway_v2.py
