[tool.poetry]
name = "sentential-gw"
version = "0.1.0"
description = "Local HTTP => Lambda invocation proxy"
authors = ["Brendan Keane <btkeane@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
pydantic = "^1.9.1"
boto3 = "^1.24.36"
uvicorn = "^0.18.2"
starlette = "^0.20.4"
pyhumps = "^3.7.2"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.29.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
  "pyproject.toml:version",
]
branch = "master"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"
